# src/ska_oso_pht_services/api.py
@@ -85,12 +85,15 @@ def hello_world() -> Response:
 
 
 @error_handler
-def proposal_get() -> Response:
+def proposal_get(proposal_id: str) -> Response:
     """
     Function that requests to /proposal are mapped to
     """
-    MOCKED_DATA = load_string_from_file("constants/data.json")
-    data = json.loads(MOCKED_DATA)
+    if proposal_id =="mock":
+        data = {"pop":"good"}
+    else:
+        MOCKED_DATA = load_string_from_file("constants/data.json")
+        data = json.loads(MOCKED_DATA)
     return data
 
 
@@ -113,7 +116,7 @@ def proposal_create() -> Response:
 
 
 @error_handler
-def proposal_edit() -> Response:
+def proposal_edit(proposal_id: str) -> Response:
     """
     Function that requests to /proposal are mapped to
     """
