# src/ska_oso_pht_services/openapi/pht-openapi-v1.yaml
@@ -23,7 +23,15 @@ paths:
             text/plain:
               schema:
                 type: string
-  /proposal:
+  /proposal/{proposal_id}:
+    parameters:
+      - name: proposal_id
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
     get:
       summary: Get a proposal
       description: |
